# V4ToCdpDebugger

./: .gitignore  CHANGELOG.md  CMakeLists.txt
.github/: readme.md
CdpTestClient/: CMakeLists.txt  cdp_test_client.cpp  raw_settings.cpp  raw_settings.h  test-cases.ini  test-cases.js
DebuggerDemo/: DebuggerDemo.vcxproj
NeoScriptTools/: CMakeLists.txt  NeoScriptTools.vcxproj
NeoScriptTools/JSDebugging/: CMakeLists.txt
V4EngineExtDemo/: CMakeLists.txt  DebuggerWorker.cpp  DebuggerWorker.h  EngineManager.cpp  EngineManager.h  main.cpp
V4ScriptDebugger/: CMakeLists.txt  V4DebugAgent.cpp  V4DebugAgent.h  V4DebugHandler.cpp  V4DebugHandler.h  V4DebugJobs.cpp  V4DebugJobs.h  V4EngineExt.cpp  V4EngineExt.h  V4ScriptDebugger.vcxproj  V4ScriptDebuggerApi.cpp  V4ScriptDebuggerApi.h  V4ScriptDebuggerBackend.cpp  V4ScriptDebuggerBackend.h  v4scriptdebugger_global.h
V4ToCdpFrontend/: CMakeLists.txt  CdpDebuggerFrontend.cpp  CdpDebuggerFrontend.h  V4CdpHelper.h  V4CdpMapper.cpp  V4CdpMapper.h  V4Helpers.cpp  V4Helpers.h
V8ScriptDebugger/: V8ScriptDebugger.vcxproj
common/: CMakeLists.txt  backtrace.h  debug_out.h  dump_variant.h
